<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_top"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginEnd="@dimen/margin_top"
        android:gravity="center"
        android:text="@string/tv_welcome"
        android:textColor="@color/strange_black"
        android:textSize="@dimen/title"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_enter_your_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_top"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginEnd="@dimen/margin_top"
        android:gravity="center"
        android:text="@string/tv_enter_your_name"
        android:textColor="@color/strange_black"
        android:textSize="@dimen/normal_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_welcome" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textfield"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_enter_your_name">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name"
            android:inputType="textCapWords"
            android:textColor="@color/strange_black"
            android:textColorHint="@color/light_grey" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_top"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginEnd="@dimen/margin_top"
        android:layout_marginBottom="@dimen/margin_top"
        android:backgroundTint="@color/brown"
        android:text="@string/btn_submit"
        android:textColor="@color/bgd_vanilla"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textfield" />

</androidx.constraintlayout.widget.ConstraintLayout>